--- a/cicd/Makefile
+++ b/cicd/Makefile
@@ -1,4 +1,5 @@
 CONCOURSE_PORT=44444
+PIPELINE_NAME=docker-nginx
 
 concourse-up:
 	docker-compose up -d
@@ -12,8 +13,14 @@ concourse-down:
 concourse-status:
 	docker-compose ps
 
+concourse-login:
+	fly -t lite login -c http://localhost:$(CONCOURSE_PORT)
+
 concourse-ui:
 	python -mwebbrowser http://localhost:$(CONCOURSE_PORT)
+
+pipeline-update:
+	fly -t lite set-pipeline -p $(PIPELINE_NAME) -c pipelines/pipeline.yml
 
 docs:
 	grip -b
