--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -2,7 +2,7 @@ resources:
   - name: nginx_dockerfile
     type: git
     source:
-      uri: https://github.com/marcelocorreia/go-glide-builder.git
+      uri: git@github.com:marcelocorreia/docker-nginx.git
       branch: master
       paths: [Dockerfile]
 
