--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -9,7 +9,7 @@ resources:
   - name: nginx_image
     type: docker-image
     source:
-     repository: marcelocorreia/nginx
+     repository: marcelocorreia/docker-nginx
 
 jobs:
   - name: build
