--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -9,9 +9,19 @@ resources:
   - name: nginx_image
     type: docker-image
     source:
-     repository: marcelocorreia/docker-nginx
-     username: {{ docker_user}}
-     password: {{ docker_password }}
+      repository: marcelocorreia/docker-nginx
+      email: {{docker_mail}}
+      username: {{docker_user}}
+      password: {{docker_password}}
+
+  - name: version
+    type: semver
+    source:
+      driver: git
+      uri: https://github.com/marcelocorreia/docker-nginx.git
+      branch: version
+      file: version
+      private_key: {{github_secret_key}}
 
 
 jobs:
