--- a/cicd/Makefile
+++ b/cicd/Makefile
@@ -23,7 +23,7 @@ pipeline-update:
 	fly -t lite set-pipeline -p $(PIPELINE_NAME) -c pipelines/pipeline.yml -l credentials.yml
 
 git-lazy:
-	git add .; git commit -m "updating..."; git push
+	cd ../; git add .; git commit -m "updating..."; git push
 
 docs:
 	grip -b
