--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -22,6 +22,7 @@ resources:
       branch: version
       file: version
       private_key: {{github_secret_key}}
+      username: marcelocorreia
 
 
 jobs:
