--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -38,5 +38,5 @@ jobs:
       - put: nginx_image
         params: {build: nginx_dockerfile}
       - put: version
-        params: {file: version}
+        params: {file: version/version}
 
