--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -45,7 +45,7 @@ jobs:
       - get: nginx_dockerfile
         trigger: true
       - put: resource_version
-        params: {pre: rc}
+        params: {bump: minor}
       - put: nginx_image
         params: {build: nginx_dockerfile}
       - put: resource_version
