--- a/cicd/Makefile
+++ b/cicd/Makefile
@@ -22,6 +22,9 @@ concourse-ui:
 pipeline-update:
 	fly -t lite set-pipeline -n -p $(PIPELINE_NAME) -c pipelines/pipeline.yml -l ../creds/credentials.yml
 
+pipeline-destroy:
+	fly -t lite destroy-pipeline -p $(PIPELINE_NAME)
+
 git-lazy:
 	cd ../; git add .; git commit -m "updating..."; git push
 
