--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -1,12 +1,4 @@
 resources:
-  - name: nginx_docker_repo
-    type: git
-    source:
-      uri: git@github.com:marcelocorreia/docker-nginx.git
-      branch: master
-      private_key: {{github_secret_key}}
-      username: marcelocorreia
-
   - name: nginx_dockerfile
     type: git
     source:
@@ -15,7 +7,6 @@ resources:
       paths: [Dockerfile]
       private_key: {{github_secret_key}}
       username: marcelocorreia
-
 
   - name: nginx_image
     type: docker-image
@@ -29,6 +20,7 @@ resources:
     type: semver
     source:
       driver: git
+      initial_version: 0.0.1
       uri: git@github.com:marcelocorreia/docker-nginx.git
       branch: version
       file: version
@@ -40,8 +32,6 @@ jobs:
   - name: build
     serial: true
     plan:
-      - get: nginx_docker_repo
-        trigger: true
       - get: nginx_dockerfile
         trigger: true
       - put: resource_version
