--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -38,5 +38,7 @@ jobs:
         params: {bump: minor}
       - put: nginx_image
         params: {build: nginx_dockerfile}
+      - put: nginx_image
+        params: {build: nginx_dockerfile, tag: resource_version }
       - put: resource_version
         params: {file: resource_version/version}
