--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -51,7 +51,7 @@ jobs:
       - get: git_repo
         trigger: true
       - put: resource_version
-        params: {bump: major}
+        params: {bump: minor}
       - put: docker_image
         params: {build: dockerfile}
       - put: docker_image
