--- a/cicd/pipelines/pipeline.yml
+++ b/cicd/pipelines/pipeline.yml
@@ -19,7 +19,7 @@ resources:
   - name: docker_image
     type: docker-image
     source:
-      repository: '{{docker_user}}/{{container_name}}'
+      repository: {{container_name}}
       email: {{docker_mail}}
       username: {{docker_user}}
       password: {{docker_password}}
